syntax = "proto3";

package api;

import "../model/template.proto";

service Instance {
    rpc Create (CreateRequest) returns (CreateReply){}
    rpc Run (CreateRequest) returns (RunReply){}
    rpc Destroy (DestroyRequest) returns (DestroyReply){}
    rpc Console (ConsoleRequest) returns (ConsoleReply){}
    rpc List (InstanceListRequest) returns (InstanceListReply){}
}

message CreateRequest {
    reserved 1; // ???
    model.InstanceTemplate instance_template = 2;
    // bool auto_recovery = 3;
}

message CreateReply {
    string instance_id = 1; // [json_name="instance_id"];
}